// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom attribute and separator additional attributes should be rendered 1`] = `
<div
  data-role="parent"
>
  <span
    data-role="parent/child"
  >
    <i
      data-role="absolute"
    />
  </span>
</div>
`;

exports[`custom attribute and separator should merge classes 1`] = `
<div
  className="test-class existed-class"
  data-role="parent"
/>
`;

exports[`custom attribute and separator should pass className to the child 1`] = `
<div
  className="test-class"
  data-role="parent"
/>
`;

exports[`custom attribute and separator should pass unknown props to the child 1`] = `
<div
  data-role="parent"
  unknownProp="value"
/>
`;

exports[`disabled ids additional attributes should not be rendered 1`] = `
<div>
  <span>
    <i />
  </span>
</div>
`;

exports[`disabled ids should merge classes 1`] = `
<div
  className="test-class existed-class"
/>
`;

exports[`disabled ids should pass className to the child 1`] = `
<div
  className="test-class"
/>
`;

exports[`disabled ids should pass unknown props to the child 1`] = `
<div
  unknownProp="value"
/>
`;

exports[`enabled ids additional attributes should be rendered 1`] = `
<div
  data-test-id="parent"
>
  <span
    data-test-id="parent:child"
  >
    <i
      data-test-id="absolute"
    />
  </span>
</div>
`;

exports[`enabled ids should merge classes 1`] = `
<div
  className="test-class existed-class"
  data-test-id="parent"
/>
`;

exports[`enabled ids should pass className to the child 1`] = `
<div
  className="test-class"
  data-test-id="parent"
/>
`;

exports[`enabled ids should pass unknown props to the child 1`] = `
<div
  data-test-id="parent"
  unknownProp="value"
/>
`;
